Update migration ymls for multilingual paragraphs.

--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_blog_list_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_blog_list_fi.yml
@@ -1,5 +1,5 @@
-id: import_paragraph_info
-label: Import Info paragraph
+id: import_paragraph_blog_list_fi
+label: Import Blog list fi paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -25,7 +25,7 @@ source:
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
   urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/info
+    - https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/blog_list?filter[langcode]=fi
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -75,24 +75,44 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_info_text
-      label: 'Text'
-      selector: /attributes/field_info_text
+      name: field_koro
+      label: 'Koro'
+      selector: /attributes/field_koro
     -
-      name: field_info_title
+      name: field_short_list
+      label: 'Short list'
+      selector: /attributes/field_short_list
+    -
+      name: field_title
       label: 'Title'
-      selector: /attributes/field_info_title
+      selector: /attributes/field_title
+    -
+      name: field_background_color
+      label: 'Background color'
+      selector: /relationships/field_background_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: info
+    default_value: blog_list
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -104,15 +124,27 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_info_text/value: field_info_text/value
-  field_info_text/format: field_info_text/format
-  field_info_text/prosessed: field_info_text/prosessed
-  field_info_title: field_info_title
-
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_koro: field_koro
+  field_short_list: field_short_list
+  field_title: field_title
+  field_background_color:
+    target_id:
+      plugin: entity_lookup
+      source: id
+      value_key: uuid
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
+      ignore_case: true
