--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_card_list_sv.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_card_list_sv.yml
@@ -1,15 +1,19 @@
-id: import_paragraph_image
-label: Import Image paragraph
+id: import_paragraph_card_list_sv
+label: Import Card list sv paragraph
 migration_group: tyollisyyspalvelut
-migration_dependencies: {}
+migration_dependencies:
+  required:
+    - import_paragraph_card_list_fi
 dependencies:
   enforced:
     module:
       - tyollisyyspalvelut_migrate
 destination:
   plugin: 'entity_reference_revisions:paragraph'
+  translations: true
 
 source:
+  translations: true
   # We use the JSON source plugin.
   plugin: url
   data_fetcher_plugin: http
@@ -25,7 +29,7 @@ source:
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
   urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/image
+    - https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/card_list?filter[langcode]=sv
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -75,31 +79,59 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_caption
-      label: 'Caption'
-      selector: /attributes/field_caption
+      name: field_card_list_bg_color
+      label: 'Background color'
+      selector: /relationships/field_card_list_bg_color
     -
-      name: field_image_height
-      label: 'Height'
-      selector: /attributes/field_image_height
+      name: field_cards
+      label: 'Cards'
+      selector: /relationships/field_cards
     -
-      name: field_image_image
-      label: 'Image'
-      selector: /relationships/field_image_image
+      name: field_card_list_is_koro
+      label: 'Is koro'
+      selector: /attributes/field_card_list_is_koro
+    -
+      name: field_card_list_title
+      label: 'Title'
+      selector: /attributes/field_card_list_title
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: image
-  id: id
+    default_value: card_list
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_card_list_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -108,21 +140,36 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_image_image:
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_background_color:
     target_id:
       plugin: entity_lookup
-      source: field_image_image/data/id
+      source: id
       value_key: uuid
-      bundle: image
-      bundle_key: bundle
-      entity_type: media
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
       ignore_case: true
-  field_caption: field_caption
-  field_image_height: field_image_height
+  field_cards:
+    plugin: sub_process
+    source: field_cards/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: card
+        bundle_key: type
+        entity_type: paragraph
+        ignore_case: true
+      target_revision_id: meta/target_revision_id
+  field_card_list_is_koro: field_card_list_is_koro
+  field_card_list_title: field_card_list_title
