--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_info_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_info_fi.yml
@@ -1,5 +1,5 @@
-id: import_paragraph_lead
-label: Import Lead paragraph
+id: import_paragraph_info_fi
+label: Import Info fi paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -25,7 +25,7 @@ source:
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
   urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/lead
+    - https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/info?filter[langcode]=fi
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -75,20 +75,36 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_lead_text
+      name: field_info_text
       label: 'Text'
-      selector: /attributes/field_lead_text
+      selector: /attributes/field_info_text
+    -
+      name: field_info_title
+      label: 'Title'
+      selector: /attributes/field_info_title
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: lead
+    default_value: info
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -100,11 +116,19 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_lead_text: field_lead_text
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_info_text/value: field_info_text/value
+  field_info_text/format: field_info_text/format
+  field_info_text/prosessed: field_info_text/prosessed
+  field_info_title: field_info_title
