--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_link_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_link_fi.yml
@@ -1,5 +1,5 @@
-id: import_paragraph_events_list
-label: Import Events list paragraph
+id: import_paragraph_link_fi
+label: Import Link fi paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -25,7 +25,7 @@ source:
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
   urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/events_list
+    - https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/link?filter[langcode]=fi
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -75,32 +75,36 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_koro
-      label: 'Koro'
-      selector: /attributes/field_koro
+      name: field_url
+      label: 'Url'
+      selector: /attributes/field_url
     -
-      name: field_short_list
-      label: 'Short list'
-      selector: /attributes/field_short_list
-    -
-      name: field_title
-      label: 'Title'
-      selector: /attributes/field_title
-    -
-      name: field_background_color
-      label: 'Background color'
-      selector: /relationships/field_background_color
+      name: field_url_text
+      label: 'Url Text'
+      selector: /attributes/field_url_text
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: events_list
+    default_value: link
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -112,22 +116,17 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_koro: field_koro
-  field_short_list: field_short_list
-  field_title: field_title
-  field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_url: field_url
+  field_url_text: field_url_text
