--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_news_list_sv.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_news_list_sv.yml
@@ -1,15 +1,19 @@
-id: import_paragraph_accordion
-label: Import Accordion paragraph
+id: import_paragraph_news_list_sv
+label: Import News list sv paragraph
 migration_group: tyollisyyspalvelut
-migration_dependencies: {}
+migration_dependencies:
+  required:
+    - import_paragraph_news_list_fi
 dependencies:
   enforced:
     module:
       - tyollisyyspalvelut_migrate
 destination:
   plugin: 'entity_reference_revisions:paragraph'
+  translations: true
 
 source:
+  translations: true
   # We use the JSON source plugin.
   plugin: url
   data_fetcher_plugin: http
@@ -24,7 +28,8 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/accordion
+  urls:
+    - https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/news_list?filter[langcode]=sv
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -35,7 +40,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uid'
+      label: 'uuid'
       selector: id
     -
       name: id
@@ -74,27 +79,59 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_accordion_title
-      label: 'Field accordion title'
-      selector: /attributes/field_accordion_title
+      name: field_koro
+      label: 'Koro'
+      selector: /attributes/field_koro
     -
-      name: field_accordion_text
-      label: 'Field accordion text'
-      selector: /attributes/field_accordion_text
+      name: field_short_list
+      label: 'Short list'
+      selector: /attributes/field_short_list
+    -
+      name: field_title
+      label: 'Title'
+      selector: /attributes/field_title
+    -
+      name: field_background_color
+      label: 'Background color'
+      selector: /relationships/field_background_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: accordion
-  id: id
+    default_value: news_list
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_news_list_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -103,14 +140,24 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_accordion_title: field_accordion_title
-  field_accordion_text/value: field_accordion_text/value
-  field_accordion_text/format: field_accordion_text/format
-  field_accordion_text/prosessed: field_accordion_text/prosessed
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_koro: field_koro
+  field_short_list: field_short_list
+  field_title: field_title
+  field_background_color:
+    target_id:
+      plugin: entity_lookup
+      source: id
+      value_key: uuid
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
+      ignore_case: true
