--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading_sv.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading_sv.yml
@@ -1,15 +1,20 @@
-id: import_paragraph_card_list
-label: Import Card list paragraph
+id: import_paragraph_subheading_sv
+label: Import Subheading sv paragraph
 migration_group: tyollisyyspalvelut
-migration_dependencies: {}
+migration_dependencies:
+  required:
+    - import_paragraph_subheading_fi
 dependencies:
   enforced:
     module:
       - tyollisyyspalvelut_migrate
 destination:
   plugin: 'entity_reference_revisions:paragraph'
+  translations: true
+
 
 source:
+  translations: true
   # We use the JSON source plugin.
   plugin: url
   data_fetcher_plugin: http
@@ -25,7 +30,8 @@ source:
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
   urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/card_list
+    - https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/subheading?filter[langcode]=sv&page%5Boffset%5D=0&page%5Blimit%5D=50
+    - https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/subheading?filter[langcode]=sv&page%5Boffset%5D=50&page%5Blimit%5D=50
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -36,7 +42,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uuid'
+      label: 'uid'
       selector: id
     -
       name: id
@@ -75,35 +81,51 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_card_list_bg_color
-      label: 'Background color'
-      selector: /relationships/field_card_list_bg_color
-    -
-      name: field_cards
-      label: 'Cards'
-      selector: /relationships/field_cards
-    -
-      name: field_card_list_is_koro
-      label: 'Is koro'
-      selector: /attributes/field_card_list_is_koro
-    -
-      name: field_card_list_title
+      name: field_subheading_title
       label: 'Title'
-      selector: /attributes/field_card_list_title
+      selector: /attributes/field_subheading_title
+    -
+      name: field_title_color
+      label: 'Field title color'
+      selector: /attributes/field_title_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: card_list
-  id: id
+    default_value: subheading
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_subheading_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -112,34 +134,25 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
-  field_cards:
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_subheading_title: field_subheading_title
+  field_title_color:
     plugin: sub_process
-    source: field_cards/data
+    source: field_title_color/data
     process:
       target_id:
         plugin: entity_lookup
         source: id
         value_key: uuid
-        bundle: card
-        bundle_key: type
-        entity_type: paragraph
+        bundle: colors
+        bundle_key: vid
+        entity_type: taxonomy_term
         ignore_case: true
-      target_revision_id: meta/target_revision_id
-  field_card_list_is_koro: field_card_list_is_koro
-  field_card_list_title: field_card_list_title
