--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_news_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_news_fi.yml
@@ -148,67 +148,11 @@ process:
     source: field_page_content/data
     process:
       target_id:
-        plugin: path_mapping
+        plugin: entity_lookup
         source: id
+        value_key: uuid
+        bundle: fi
+        bundle_key: langcode
+        entity_type: paragraph
+        ignore_case: true
       target_revision_id: meta/target_revision_id
-  # field_page_content:
-  #   plugin: sub_process
-  #   source: field_page_content/data
-  #   process:
-  #     target_id:
-  #       plugin: entity_lookup
-  #       source: id
-  #       value_key: uuid
-  #       bundle: fi
-  #       bundle_key: langcode
-  #       entity_type: paragraph
-  #       ignore_case: true
-  #     target_revision_id: meta/target_revision_id
-  # pseudo_mbe_book_paragraph:
-  #   plugin: migration_lookup
-  #   migration: import_paragraph_text
-  #   source: id
-  # field_page_content:
-  #   plugin: sub_process
-  #   source: '@pseudo_mbe_book_paragraph'
-  #   process:
-  #     target_id: '0'
-  #     target_revision_id: '1'
-  # # field_page_content:
-  #   plugin: sub_process
-  #   source: field_page_content/data
-  #   process:
-  #     target_id:
-  #       plugin: migration_lookup
-  #       source: pid
-  #       migration: import_paragraph_text
-  #     target_revision_id:
-  #       plugin: migration_lookup
-  #         source: rid
-  #         migration: import_paragraph_text
-  # field_page_content:
-  #   plugin: sub_process
-  #   source: field_page_content/data
-  #   process:
-  #     target_id:
-  #       -
-  #         plugin: migration_lookup
-  #         migration:
-  #           - import_paragraph_text
-  #         source: id
-  #         no_stub: true
-  #       # -
-  #       #   plugin: extract
-  #       #   index:
-  #       #     - 0
-  #     target_revision_id:
-  #       -
-  #         plugin: migration_lookup
-  #         migration:
-  #           - import_paragraph_text
-  #         source: revision_id
-  #         no_stub: true
-        # -
-        #   plugin: extract
-        #   index:
-        #     - 1
