--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_accordion_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_accordion_fi.yml
@@ -1,19 +1,15 @@
-id: import_paragraph_mainheading_sv
-label: Import Mainheading sv paragraph
+id: import_paragraph_accordion_fi
+label: Import Accordion fi paragraph
 migration_group: tyollisyyspalvelut
-migration_dependencies:
-  required:
-    - import_paragraph_mainheading_fi
+migration_dependencies: {}
 dependencies:
   enforced:
     module:
       - tyollisyyspalvelut_migrate
 destination:
   plugin: 'entity_reference_revisions:paragraph'
-  translations: true
 
 source:
-  translations: true
   # We use the JSON source plugin.
   plugin: url
   data_fetcher_plugin: http
@@ -28,7 +24,7 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/mainheading?filter[langcode]=sv
+  urls: https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/accordion?filter[langcode]=fi
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -94,49 +90,23 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
+      name: field_accordion_title
+      label: 'Field accordion title'
+      selector: /attributes/field_accordion_title
     -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
-    -
-      name: field_title_color
-      label: 'Field title color'
-      selector: /attributes/field_title_color
+      name: field_accordion_text
+      label: 'Field accordion text'
+      selector: /attributes/field_accordion_text
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: mainheading
-  pseudo_paragraph_field:
-    plugin: migration_lookup
-    migration: import_paragraph_mainheading_fi
-    source: id
-  id:
-    plugin: extract
-    source: '@pseudo_paragraph_field'
-    index:
-      - '0'
-  revision_id:
-    plugin: extract
-    source: '@pseudo_paragraph_field'
-    index:
-      - '1'
-  # id:
-  #   plugin: migration_lookup
-  #   source: id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
-  # revision_id:
-  #   plugin: migration_lookup
-  #   source: revision_id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
+    default_value: accordion
+  id: id
   uuid: uuid
+  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -145,6 +115,9 @@ process:
       source: created
   status: status
   langcode: langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
@@ -154,17 +127,7 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_show_date: field_show_date
-  field_title: field_title
-  field_title_color:
-    plugin: sub_process
-    source: field_title_color/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: colors
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+  field_accordion_title: field_accordion_title
+  field_accordion_text/value: field_accordion_text/value
+  field_accordion_text/format: field_accordion_text/format
+  field_accordion_text/prosessed: field_accordion_text/prosessed
