--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_card_en.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_card_en.yml
@@ -1,9 +1,9 @@
-id: import_paragraph_mainheading_sv
-label: Import Mainheading sv paragraph
+id: import_paragraph_card_en
+label: Import Card en paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies:
   required:
-    - import_paragraph_mainheading_fi
+    - import_paragraph_card_fi
 dependencies:
   enforced:
     module:
@@ -28,7 +28,8 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/mainheading?filter[langcode]=sv
+  urls:
+    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/card?filter[langcode]=en
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -39,7 +40,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uid'
+      label: 'uuid'
       selector: id
     -
       name: id
@@ -94,27 +95,59 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
+      name: field_background_color
+      label: 'Background color'
+      selector: /relationships/field_background_color
     -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
+      name: field_button_color
+      label: 'Button color'
+      selector: /relationships/field_button_color
+    -
+      name: field_card_button_text
+      label: 'Card button text'
+      selector: /attributes/field_card_button_text
+    -
+      name: field_card_height
+      label: 'Card height'
+      selector: /attributes/field_card_height
+    -
+      name: field_card_width
+      label: 'Card width'
+      selector: /attributes/field_card_width
+    -
+      name: field_ic_image
+      label: 'Image'
+      selector: /attributes/field_ic_image
+    -
+      name: field_card_button_url
+      label: 'Card button url'
+      selector: /attributes/field_card_button_url
+    -
+      name: field_card_text
+      label: 'Card text'
+      selector: /attributes/field_card_text
+    -
+      name: field_text_color
+      label: 'Text color'
+      selector: /relationships/field_text_color
+    -
+      name: field_card_title
+      label: 'Card title'
+      selector: /attributes/field_card_title
     -
       name: field_title_color
-      label: 'Field title color'
-      selector: /attributes/field_title_color
+      label: 'Title color'
+      selector: /relationships/field_title_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: mainheading
+    default_value: card
   pseudo_paragraph_field:
     plugin: migration_lookup
-    migration: import_paragraph_mainheading_fi
+    migration: import_paragraph_card_fi
     source: id
   id:
     plugin: extract
@@ -126,16 +159,6 @@ process:
     source: '@pseudo_paragraph_field'
     index:
       - '1'
-  # id:
-  #   plugin: migration_lookup
-  #   source: id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
-  # revision_id:
-  #   plugin: migration_lookup
-  #   source: revision_id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
   uuid: uuid
   created:
     -
@@ -154,17 +177,56 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_show_date: field_show_date
-  field_title: field_title
+  field_background_color:
+    target_id:
+      plugin: entity_lookup
+      source: id
+      value_key: uuid
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
+      ignore_case: true
+  field_button_color:
+    target_id:
+      plugin: entity_lookup
+      source: id
+      value_key: uuid
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
+      ignore_case: true
+  field_card_button_text: field_card_button_text
+  field_card_height: field_card_height
+  field_card_width: field_card_width
+  field_card_button_url: field_card_button_url
+  field_ic_image:
+    target_id:
+      plugin: entity_lookup
+      source: field_ic_image/data/id
+      value_key: uuid
+      bundle: image
+      bundle_key: bundle
+      entity_type: media
+      ignore_case: true
+  field_card_text/value: field_card_text/value
+  field_card_text/format: field_card_text/format
+  field_card_text/prosessed: field_card_text/prosessed
+  field_text_color:
+    target_id:
+      plugin: entity_lookup
+      source: id
+      value_key: uuid
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
+      ignore_case: true
+  field_card_title: field_card_title
   field_title_color:
-    plugin: sub_process
-    source: field_title_color/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: colors
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+    target_id:
+      plugin: entity_lookup
+      source: id
+      value_key: uuid
+      bundle: colors
+      bundle_key: vid
+      entity_type: taxonomy_term
+      ignore_case: true
