--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_hero_en.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_hero_en.yml
@@ -1,9 +1,9 @@
-id: import_paragraph_mainheading_sv
-label: Import Mainheading sv paragraph
+id: import_paragraph_hero_en
+label: Import Hero en paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies:
   required:
-    - import_paragraph_mainheading_fi
+    - import_paragraph_hero_fi
 dependencies:
   enforced:
     module:
@@ -28,7 +28,7 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/mainheading?filter[langcode]=sv
+  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/hero?filter[langcode]=en
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -39,7 +39,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uid'
+      label: 'uuid'
       selector: id
     -
       name: id
@@ -94,27 +94,31 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
+      name: field_hero_image
+      label: 'Image'
+      selector: /relationships/field_hero_image
     -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
+      name: field_hero_text
+      label: 'Test'
+      selector: /attributes/field_hero_text
     -
-      name: field_title_color
-      label: 'Field title color'
-      selector: /attributes/field_title_color
+      name: field_hero_title
+      label: 'Title'
+      selector: /attributes/field_hero_title
+    -
+      name: field_shallow
+      label: 'Shallow'
+      selector: /attributes/field_shallow
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: mainheading
+    default_value: hero
   pseudo_paragraph_field:
     plugin: migration_lookup
-    migration: import_paragraph_mainheading_fi
+    migration: import_paragraph_hero_fi
     source: id
   id:
     plugin: extract
@@ -126,16 +130,6 @@ process:
     source: '@pseudo_paragraph_field'
     index:
       - '1'
-  # id:
-  #   plugin: migration_lookup
-  #   source: id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
-  # revision_id:
-  #   plugin: migration_lookup
-  #   source: revision_id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
   uuid: uuid
   created:
     -
@@ -154,17 +148,17 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_show_date: field_show_date
-  field_title: field_title
-  field_title_color:
-    plugin: sub_process
-    source: field_title_color/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: colors
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+  field_hero_image:
+    target_id:
+      plugin: entity_lookup
+      source: field_hero_image/data/id
+      value_key: uuid
+      bundle: image
+      bundle_key: bundle
+      entity_type: media
+      ignore_case: true
+  field_hero_text/value: field_hero_text/value
+  field_hero_text/format: field_hero_text/format
+  field_hero_text/prosessed: field_hero_text/prosessed
+  field_hero_title: field_hero_title
+  field_shallow: field_shallow
