--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_phone_number_box_fi.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_phone_number_box_fi.yml
@@ -1,5 +1,5 @@
-id: import_paragraph_phone_number_box
-label: Import Phone number box paragraph
+id: import_paragraph_phone_number_box_fi
+label: Import Phone number box fi paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies: {}
 dependencies:
@@ -25,7 +25,7 @@ source:
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
   urls:
-    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/phone_number_box
+    - https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/phone_number_box?filter[langcode]=fi
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -75,6 +75,18 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
@@ -104,13 +116,18 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
   field_pb_text/value: field_pb_text/value
   field_pb_text/format: field_pb_text/format
   field_pb_text/prosessed: field_pb_text/prosessed
