--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_phone_number_box_sv.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_phone_number_box_sv.yml
@@ -1,15 +1,20 @@
-id: import_paragraph_hero
-label: Import Hero paragraph
+id: import_paragraph_phone_number_box_sv
+label: Import Phone number box sv paragraph
 migration_group: tyollisyyspalvelut
-migration_dependencies: {}
+migration_dependencies:
+  required:
+    - import_paragraph_phone_number_box_fi
 dependencies:
   enforced:
     module:
       - tyollisyyspalvelut_migrate
 destination:
   plugin: 'entity_reference_revisions:paragraph'
+  translations: true
+
 
 source:
+  translations: true
   # We use the JSON source plugin.
   plugin: url
   data_fetcher_plugin: http
@@ -24,7 +29,8 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/hero
+  urls:
+    - https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/phone_number_box?filter[langcode]=sv
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -74,35 +80,51 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_hero_image
-      label: 'Image'
-      selector: /relationships/field_hero_image
+      name: field_pb_text
+      label: 'Text'
+      selector: /attributes/field_pb_text
     -
-      name: field_hero_text
-      label: 'Test'
-      selector: /attributes/field_hero_text
-    -
-      name: field_hero_title
+      name: field_pb_title
       label: 'Title'
-      selector: /attributes/field_hero_title
-    -
-      name: field_shallow
-      label: 'Shallow'
-      selector: /attributes/field_shallow
+      selector: /attributes/field_pb_title
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: card_list
-  id: id
+    default_value: phone_number_box
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_phone_number_box_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -111,24 +133,16 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_hero_image:
-    target_id:
-      plugin: entity_lookup
-      source: field_hero_image/data/id
-      value_key: uuid
-      bundle: image
-      bundle_key: bundle
-      entity_type: media
-      ignore_case: true
-  field_hero_text/value: field_hero_text/value
-  field_hero_text/format: field_hero_text/format
-  field_hero_text/prosessed: field_hero_text/prosessed
-  field_hero_title: field_hero_title
-  field_shallow: field_shallow
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_pb_text/value: field_pb_text/value
+  field_pb_text/format: field_pb_text/format
+  field_pb_text/prosessed: field_pb_text/prosessed
+  field_pb_title: field_pb_title
