--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading.yml
@@ -24,7 +24,9 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading
+  urls:
+    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading?page%5Boffset%5D=0&page%5Blimit%5D=50
+    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading?page%5Boffset%5D=50&page%5Blimit%5D=50
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
