--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading_en.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_subheading_en.yml
@@ -1,9 +1,9 @@
-id: import_paragraph_mainheading_sv
-label: Import Mainheading sv paragraph
+id: import_paragraph_subheading_en
+label: Import Subheading en paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies:
   required:
-    - import_paragraph_mainheading_fi
+    - import_paragraph_subheading_fi
 dependencies:
   enforced:
     module:
@@ -11,6 +11,7 @@ dependencies:
 destination:
   plugin: 'entity_reference_revisions:paragraph'
   translations: true
+
 
 source:
   translations: true
@@ -28,7 +29,9 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/mainheading?filter[langcode]=sv
+  urls:
+    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading?filter[langcode]=en&page%5Boffset%5D=0&page%5Blimit%5D=50
+    - https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading?filter[langcode]=en&page%5Boffset%5D=50&page%5Blimit%5D=50
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -94,13 +97,9 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
-    -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
+      name: field_subheading_title
+      label: 'Title'
+      selector: /attributes/field_subheading_title
     -
       name: field_title_color
       label: 'Field title color'
@@ -111,10 +110,10 @@ source:
 process:
   type:
     plugin: default_value
-    default_value: mainheading
+    default_value: subheading
   pseudo_paragraph_field:
     plugin: migration_lookup
-    migration: import_paragraph_mainheading_fi
+    migration: import_paragraph_subheading_fi
     source: id
   id:
     plugin: extract
@@ -126,16 +125,6 @@ process:
     source: '@pseudo_paragraph_field'
     index:
       - '1'
-  # id:
-  #   plugin: migration_lookup
-  #   source: id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
-  # revision_id:
-  #   plugin: migration_lookup
-  #   source: revision_id
-  #   migration: import_paragraph_mainheading_fi
-  #   no_stub: true
   uuid: uuid
   created:
     -
@@ -154,8 +143,7 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_show_date: field_show_date
-  field_title: field_title
+  field_subheading_title: field_subheading_title
   field_title_color:
     plugin: sub_process
     source: field_title_color/data
